@@ -111,5 +111,5 @@ val inactive : partial:partial -> pattern -> bool
 (* Ambiguous bindings *)
 val check_ambiguous_bindings : case list -> unit
 
-(* The tag used for open polymorphic variant types *)
-val some_other_tag : label
+(* The tag used for open polymorphic variant types with an abstract row *)
+val some_private_tag : label
